# SD-DefSLAM

./: .gitignore  CMakeLists.txt  DisparityEstimator.cpp  DisparityEstimator.h  IsoNRSfM.ipynb  LICENSE  LICENSE.txt  README.md  build.sh  filters.txt  filtersCNN.txt  isoNRSfM_eq.py  run.sh  runHamlyn.sh
Apps/: DefSLAM  DefSLAMGT  DefSLAMGTCT  DefSLAMHamyln  DefSLAMHamylnINV  runHamlynstd.sh  runHamlynstd2.sh  rungt.sh  simple_CT.cc  simple_camera.cc  simple_endoscope.cc  stereo_Hamlyn.cc  stereo_Hamlyn_inv.cc  stereo_groundtruth.cc
Dataloaders/: CMakeLists.txt  StereoRectifier.cc  StereoRectifier.h  stereorectifier.cc  stereorectifier.h
Dataloaders/Hamlyn/: dataloader.cc  dataloader.h
EvaluationTools/: evaluate.py  evaluateError.py  evaluateScale.py  histogram.py
Examples/Monocular/: Mandala.cc  Matches.txt  ScaleVariation.txt  StereoGT.sh  Stereo_Morlana_script.txt  simple-CT.cc  simple-Stereo.cc  simple.cc  simple_cardboard.cc  status20.txt  stereo_groundtruth.cc  untitled2.m
Examples/NormalEstimator/: checkcoefficients  checkcoefficients.cc
Examples/Relocalisation/: PxError10.txt  localtime10.txt  meshPoisson.vtk  relocalisation-RGBD.cc  status10.txt  stereoGT  time01.txt
Examples/Schwarp/: Example_schwarp.cc
Examples/TemplateGenerator/: templategen.cc
Examples/dataset/: PxError00.txt  PxError20.txt  PxError30.txt  PxError50.txt  ResultSubvsNewRigid.eps  Results.fig  RigidScaleDrift.eps  RigidScaleDriftOriginalvsNew.eps  ScaleDrift4800-5000(2).eps  Scaleestimation  SystemTest.cc  SystemTest.h  kinectTshirt.cc  kinectpaper.cc  localtime00.txt  localtime50.txt  meshPoisson.vtk  plotandSave.m  ploterrorandlost.m  plotseverallost.m  pointPoissonSmoothed.vtk  status00.txt  status20.txt  status30.txt  status50.txt  timescalculation.m
Modules/Common/: DefKeyFrame.cc  DefKeyFrame.h  DefMap.cc  DefMap.h  DefMapPoint.cc  DefMapPoint.h  SettingsLoader.cc  SettingsLoader.h  System.cc  System.h
Modules/GroundTruth/: DisparityEstimatorLibelas.cc  DisparityEstimatorLibelas.h  GroundTruthCalculator.cc  GroundTruthCalculator.h  GroundTruthFrame.cc  GroundTruthFrame.h  GroundTruthKeyFrame.cc  GroundTruthKeyFrame.h  MinMedianFilter.cc  MinMedianFilter.h
Modules/Mapping/: DefKLTLocalMapping.cc  DefKLTLocalMapping.h  DefLocalMapping.cc  DefLocalMapping.h  NormalEstimator.cc  NormalEstimator.h  PolySolver.cc  PolySolver.h  Schwarp.cc  Schwarp.h  SchwarpDatabase.cc  SchwarpDatabase.h  ShapeFromNormals.cc  ShapeFromNormals.h  Surface.cc  Surface.h  SurfacePoint.cc  SurfacePoint.h  SurfaceRegistration.cc  SurfaceRegistration.h  WarpDatabase.h  diffProp.h
Modules/Masker/: BorderMask.cc  BorderMask.h  BrightMask.cc  BrightMask.h  CnnSegmentation.cc  CnnSegmentation.h  Filter.h  Masker.cc  Masker.h
Modules/Matching/: DefORBmatcher.cc  DefORBmatcher.h  LucasKanadeTracker.cc  LucasKanadeTracker.h
Modules/Segmentation/: CnnSegmentation.cc  CnnSegmentation.h
Modules/Settings/: CC_MAC.h  set_MAC.h
Modules/Template/: Edge.cc  Edge.h  Facet.cc  Facet.h  LaplacianMesh.cc  LaplacianMesh.h  Node.cc  Node.h  Template.cc  Template.h  TemplateGenerator.cc  TemplateGenerator.h  TriangularMesh.cc  TriangularMesh.h
Modules/ToolsPCL/: CMakeLists.txt  PCLNormalEstimator.cc  PCLNormalEstimator.h  SmootherMLS.cc  SmootherMLS.h
Modules/Tracking/: DefKLTTracking.cc  DefKLTTracking.h  DefOptimizer.cc  DefOptimizer.h  DefTracking.cc  DefTracking.h
Modules/Viewer/: DefFrameDrawer.cc  DefFrameDrawer.h  DefMapDrawer.cc  DefMapDrawer.h  DefViewer.cc  DefViewer.h  MeshDrawer.cc  MeshDrawer.h
calibration_files/: Calib_12+39.yaml  Medical.yaml  asus.yaml  asusKinectPaper.yaml  cardboard.yaml  default.yaml  hamlyn.yaml  microsoftlifecam.yaml  perceptIn_ORBSLAM.yaml  stereo.yaml  stereo0.yaml  stereo0_.yaml  stereo0_ORBSLAM.yaml  stereo1.yaml  stereo1_ORBSLAM.yaml  stereo2.yaml  stereo2Med.yaml  stereo2_ORBSLAM.yaml  stereo3.yaml  stereo4.yaml  stereo4_ORBSLAM.yaml  stereoC_ORBSLAM.yaml  video4.yaml
cmake_modules/: VTKConfig.cmake
include/: CC_MAC.h  DeformationFrameDrawer.h  DeformationKeyFrame.h  DeformationLocalMapping.h  DeformationMap.h  DeformationMapDrawer.h  DeformationMapPoint.h  DeformationORBmatcher.h  DeformationOptimizer.h  DeformationTracking.h  DeformationViewer.h  Edge.h  Facet.h  Frame.h  FrameDrawer.h  GroundTruthCalculator.h  GroundTruthFrame.h  GroundTruthKeyFrame.h  KeyFrame.h  LaplacianMesh.h  LinearSystemForCeres.h  LocalMapping.h  Map.h  MapDrawer.h  MapPoint.h  MeshDrawer.h  MinMedianFilter.h  Node.h  NormalEstimator.h  ORBextractor.h  Optimizer.h  PolySolver.h  Schwarp.h  SchwarpDatabase.h  ShapeFromNormals.h  Surface.h  SurfacePoint.h  SurfaceRegistration.h  System.h  Template.h  (+9 more)
src/: DeformationFrameDrawer.cc  DeformationKeyFrame.cc  DeformationLocalMapping.cc  DeformationMap.cc  DeformationMapDrawer.cc  DeformationMapPoint.cc  DeformationORBmatcher.cc  DeformationOptimizer.cc  DeformationTracking.cc  DeformationViewer.cc  Edge.cc  Facet.cc  FrameDrawer.cc  GroundTruthCalculator.cc  GroundTruthFrame.cc  GroundTruthKeyFrame.cc  KeyFrame.cc  LaplacianMesh.cc  LocalMapping.cc  LucasKanadeTracker.cc  Map.cc  MapDrawer.cc  MapPoint.cc  MeshDrawer.cc  MinMedianFilter.cc  Node.cc  NormalEstimator.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PolySolver.cc  Schwarp.cc  SchwarpDatabase.cc  ShapeFromNormals.cc  Surface.cc  SurfacePoint.cc  SurfaceRegistration.cc  System.cc  Template.cc  TemplateGenerator.cc  (+5 more)
